--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,6 @@ services:
     ports:
       - "5006:5006"
     volumes:
-      - ./data:/data
+      - ./server-files:/app/server-files
+      - ./user-files:/app/user-files
     restart: unless-stopped
