--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^2.6.2",
     "@types/better-sqlite3": "^7.5.0",
     "@types/node": "^17.0.31",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
 }
