--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8.15.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.4"
   }
 }
