--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node app",
     "lint": "eslint .",
+    "build": "tsc",
     "types": "tsc --noEmit --incremental",
     "verify": "yarn -s lint && yarn types"
   },
