--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.15.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
+    "@types/better-sqlite3": "^7.5.0",
     "@types/node": "^17.0.31",
     "typescript": "^4.6.4"
   }
