build: follow docker best practices
- use COPY when ADD isn't essential [ref](https://docs.docker.com/develop/develop-images/dockerfile_best-practices/#add-or-copy)
- consolidate run commands [ref](https://docs.docker.com/develop/dev-best-practices/#how-to-keep-your-images-small)
- pin image version
- include syntax version

--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,12 +1,13 @@
-FROM alpine as base
+# syntax=docker/dockerfile:1
+FROM alpine:3 as base
 RUN apk add --no-cache nodejs yarn npm python3 openssl build-base
 WORKDIR /app
 ENV NODE_ENV=production
-ADD yarn.lock package.json ./
-RUN npm rebuild bcrypt --build-from-source
-RUN yarn install --production
+COPY yarn.lock package.json ./
+RUN npm rebuild bcrypt --build-from-source && \
+    yarn install --production
 
-FROM alpine as prod
+FROM alpine:3 as prod
 RUN apk add --no-cache nodejs yarn openssl tini
 WORKDIR /app
 COPY --from=base /app /app
