--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -1,16 +1,24 @@
 # syntax=docker/dockerfile:1
+FROM alpine:3 as build
+RUN apk add --no-cache nodejs yarn npm python3 openssl build-base
+WORKDIR /app
+COPY . .
+RUN yarn install && yarn build
+
 FROM alpine:3 as base
 RUN apk add --no-cache nodejs yarn npm python3 openssl build-base
 WORKDIR /app
 ENV NODE_ENV=production
+COPY --from=build /app/build ./
 COPY yarn.lock package.json ./
+COPY migrations ./migrations
+COPY sql ./sql
 RUN npm rebuild bcrypt --build-from-source && \
     yarn install --production
 
 FROM alpine:3 as prod
-RUN apk add --no-cache nodejs yarn openssl tini
+RUN apk add --no-cache nodejs openssl tini
 WORKDIR /app
 COPY --from=base /app /app
-ADD . .
 ENTRYPOINT ["/sbin/tini","-g",  "--"]
 CMD ["node", "app.js"]
