build: add clean script
- cleans build artifacts
- presumably not functional on windows. Consider adding rimraf or
  similar

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "ts-node app",
     "lint": "eslint .",
     "build": "tsc",
+    "clean": "rm -rf build",
     "types": "tsc --noEmit --incremental",
     "verify": "yarn -s lint && yarn types"
   },
