--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
     "@types/better-sqlite3": "^7.5.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.31",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
