--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.4"
-  },
-  "prettier": {
-    "singleQuote": true,
-    "trailingComma": "none"
   }
 }
