--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app",
+    "dev": "ts-node app",
     "lint": "eslint .",
     "build": "tsc",
     "types": "tsc --noEmit --incremental",
