--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint --ignore-pattern '**/node_modules/*' --ignore-pattern '**/log/*' --ignore-pattern 'supervise' --ignore-pattern '**/shared/*' ."
   },
   "dependencies": {
-    "@actual-app/api": "^4.0.1",
-    "@actual-app/web": "^4.0.2",
+    "@actual-app/api": "4.1.0",
+    "@actual-app/web": "4.1.0",
     "adm-zip": "^0.5.9",
     "bcrypt": "^5.0.1",
     "better-sqlite3": "^7.5.0",
