--- a/package.json
+++ b/package.json
@@ -23,16 +23,17 @@
     "express-actuator": "^1.8.1",
     "express-response-size": "^0.0.3",
     "node-fetch": "^2.2.0",
+    "plaid": "^7.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.5.0",
+    "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "eslint": "^8.15.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
-    "@types/better-sqlite3": "^7.5.0",
-    "@types/node": "^17.0.31",
     "typescript": "^4.6.4"
   }
 }
