--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "module": "commonjs",
     "outDir": "build"
   },
-  "exclude": ["node_modules", "build", "./app-plaid.js"]
+  "exclude": ["node_modules", "build"]
 }
