build: migrate to yarn v3.2.1

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,12 @@ user-files
 server-files
 fly.toml
 build/
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
