chore: include .github dir in lint script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app",
-    "lint": "eslint .",
+    "lint": "eslint . .github",
     "build": "tsc",
     "types": "tsc --noEmit --incremental",
     "verify": "yarn -s lint && yarn types"
