--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   pull_request:
-    branches: '*'
+    branches: "*"
 
 jobs:
   lint:
@@ -20,7 +20,7 @@ jobs:
         uses: actions/cache@v2
         id: cache
         with:
-          path: '**/node_modules'
+          path: "**/node_modules"
           key: yarn-v1-${{ hashFiles('**/yarn.lock') }}
       - name: Install
         run: yarn --immutable
