--- a/oapi.yml
+++ b/oapi.yml
@@ -357,6 +357,43 @@ paths:
                   value: file-not-found
         "500":
           $ref: "#/components/responses/error-internal"
+  "/sync/user-create-key":
+    post:
+      # summary: TODO
+      tags:
+        - sync
+      parameters:
+        - $ref: "#/components/parameters/token-header"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                fileId:
+                  type: string
+                keyId:
+                  type: string
+                keySalt:
+                  type: string
+                testContent:
+                  type: string
+      responses:
+        "200":
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+              examples:
+                success:
+                  value: { status: "ok" }
+        "500":
+          $ref: "#/components/responses/error-internal"
 components:
   schemas:
     Info:
