Fixed .env and docker-compose data path variable

--- a/actual_server.env
+++ b/actual_server.env
@@ -1,10 +1,7 @@
 # This files contains all the variables you may need to change to set up Actual budget.
 
-# User data location of Actual
-userFilesPath=./user-files
-
 # Server data location of Actual
-serverFilesPath=./server-files
+dataPath=./data
 
 # Actual web app port
 externalPort=5006
