--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,15 @@
 {
 	"setupFiles": ["./jest.setup.js"],
-	"testPathIgnorePatterns": ["/node_modules/", "/build/"]
+	"testPathIgnorePatterns": ["/node_modules/", "/build/"],
+  "roots": ["<rootDir>"],
+  "testMatch": ["<rootDir>/**/*.spec.js"],
+  "testPathIgnorePatterns": ["dist"],
+  "moduleFileExtensions": ["ts", "js", "json"],
+  "testEnvironment": "node",
+  "collectCoverage": true,
+  "collectCoverageFrom": [",<rootDir>/src/**/*.{js,ts,tsx}"],
+  "coveragePathIgnorePatterns": ["/node_modules/"],
+  "coverageReporters": ["html", "lcov", "text", "text-summary"],
+  "resetMocks": true,
+  "restoreMocks": true
 }
