--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,10 @@
     // Check JS files too
     "allowJs": true,
     "checkJs": true,
-    "moduleResolution": "node",
-    "module": "commonjs",
-    "outDir": "build"
+    "moduleResolution": "node16",
+    "module": "node16",
+    "outDir": "build",
+    "traceResolution": true
   },
   "exclude": ["node_modules", "build", "./app-plaid.js"]
 }
