Upgrade to ESM, update to latest dependencies (#128)
* Port to ESM

* + @types packages

* s/rmdir/rm/

* bump uuid

* Fix reading in eslintrc

* Add /build to eslintignore

* Update linting/types packages

* Stronger error checking

* - DOM globals

* update better-sqlite3

* Create .node-version

* Revert "update better-sqlite3"

This reverts commit 6b8003804fc09ade6c81324f591e5ad853517dfa.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2022",
     // DOM for URL global in Node 16+
-    "lib": ["ES2021", "DOM"],
+    "lib": ["ES2021"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
@@ -12,8 +12,8 @@
     // Check JS files too
     "allowJs": true,
     "checkJs": true,
-    "moduleResolution": "node",
-    "module": "commonjs",
+    "moduleResolution": "node16",
+    "module": "node16",
     "outDir": "build"
   },
   "exclude": ["node_modules", "build", "./app-plaid.js"]
