--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "23.2.6",
   "license": "MIT",
   "description": "actual syncing server",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node app",
     "lint": "eslint .",
     "build": "tsc",
-    "test": "jest",
+    "test": "NODE_OPTIONS='--experimental-vm-modules --trace-warnings' jest",
     "types": "tsc --noEmit --incremental",
     "verify": "yarn -s lint && yarn types"
   },
@@ -22,21 +22,26 @@
     "express": "4.18.2",
     "express-actuator": "1.8.4",
     "express-response-size": "^0.0.3",
-    "uuid": "^3.3.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/better-sqlite3": "^7.5.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/express-actuator": "^1.8.0",
     "@types/jest": "^29.2.3",
-    "@types/node": "^17.0.31",
+    "@types/node": "^17.0.45",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.23.0",
-    "@typescript-eslint/parser": "^5.23.0",
-    "eslint": "^8.15.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint": "^8.33.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.3.1",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.3",
     "supertest": "^6.3.1",
-    "typescript": "^4.6.4"
+    "typescript": "^4.9.5"
   },
   "packageManager": "yarn@3.2.1"
 }
