Rollback prettierrc config

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,4 @@
 {
     "singleQuote": true,
-    "trailingComma": "none",
-    "printWidth": 120,
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true,
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false
+    "trailingComma": "none"
 }
