docs(engines): add node version in package.json engines

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "actual-sync",
+  "engines": {
+    "node": ">=14 <19"
+  },
   "version": "23.2.9",
   "license": "MIT",
   "description": "actual syncing server",
