--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       # - ACTUAL_HTTPS_CERT=/data/selfhost.crt
       # - ACTUAL_NORDIGEN_SECRET_ID=xxxx
       # - ACTUAL_NORDIGEN_SECRET_KEY=xxxx
-      # See all optoins and more details at https://actualbudget.github.io/docs/Installing/Configuration
+      # See all options and more details at https://actualbudget.github.io/docs/Installing/Configuration
     volumes:
       # Change './actual-data' below to the path to the folder you want Actual to store its data in on your server.
       # '/data' is the path Actual will look for its files in by default, so leave that as-is.
