--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -11,8 +11,9 @@ on:
 
 env:
   IMAGES: |
-    jlongster/actual-server
+    actualbudget/actual-server
     ghcr.io/actualbudget/actual-server
+    jlongster/actual-server
 
   # Creates the following tags:
   # - actual-server:latest (see docker/metadata-action flavor inputs, below)
