Don’t check for release notes on release/* branches

--- a/.github/workflows/check-release-notes.yml
+++ b/.github/workflows/check-release-notes.yml
@@ -2,7 +2,9 @@ name: Check release notes
 
 on:
   pull_request:
-    branches: '*'
+    branches:
+      - '*'
+      - '!release/*'
 
 jobs:
   check:
