--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -27,6 +27,13 @@ jobs:
   build:
     name: Build Docker image
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu, alpine]
+        arch: [amd64, arm64, arm/v7, arm/v6]
+        exclude:
+          - os: ubuntu
+            arch: arm/v6
     steps:
       - uses: actions/checkout@v3
 
@@ -70,20 +77,11 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push standard image
+      - name: Build and push image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          file: docker/stable-ubuntu.Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          file: docker/stable-${{ matrix.os }}.Dockerfile
+          platforms: linux/${{ matrix.arch }}
           tags: ${{ steps.meta.outputs.tags }}
-
-      - name: Build and push Alpine image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          file: docker/stable-alpine.Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
-          tags: ${{ steps.alpine-meta.outputs.tags }}
