--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "bcrypt": "^5.1.0",
     "better-sqlite3": "^8.2.0",
     "body-parser": "^1.20.1",
+    "connect-redis": "^7.1.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "4.18.2",
     "express-actuator": "1.8.4",
     "express-rate-limit": "^6.7.0",
     "express-response-size": "^0.0.3",
+    "express-session": "^1.17.3",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.0",
     "jws": "^4.0.0",
     "nordigen-node": "^1.2.3",
+    "redlock": "^5.0.0-beta.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -36,6 +41,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-actuator": "^1.8.0",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "^29.2.3",
     "@types/node": "^17.0.45",
     "@types/supertest": "^2.0.12",
