fix dev scripts and added request logging in dev

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "ts-node-esm app",
-    "dev": "nodemon -e ts,json app",
-    "debug": "DEBUG=express:* yarn dev",
+    "dev": "NODE_ENV=development nodemon -e ts,js app",
+    "debug": "NODE_ENV=development DEBUG='express:*' yarn dev",
     "lint": "eslint . --max-warnings 0",
     "build": "tsc",
     "test": "NODE_ENV=test NODE_OPTIONS='--experimental-vm-modules --trace-warnings' jest  --coverage",
@@ -26,6 +26,7 @@
     "express": "4.18.2",
     "express-actuator": "1.8.4",
     "express-rate-limit": "^6.7.0",
+    "express-requests-logger": "^4.0.0",
     "express-response-size": "^0.0.3",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
@@ -43,7 +44,6 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-actuator": "^1.8.0",
-    "@types/express-session": "^1.17.7",
     "@types/jest": "^29.2.3",
     "@types/node": "^17.0.45",
     "@types/supertest": "^2.0.12",
