WIP: fix edge CI build

--- a/.github/workflows/docker-edge.yml
+++ b/.github/workflows/docker-edge.yml
@@ -9,8 +9,7 @@ on:
       - README.md
       - LICENSE.txt
   pull_request:
-    branches:
-      - master
+    branches: '*'
   schedule:
     - cron: '0 0 * * *'
   workflow_dispatch:
