--- a/jest.config.json
+++ b/jest.config.json
@@ -5,10 +5,12 @@
   "roots": ["<rootDir>"],
   "moduleFileExtensions": ["ts", "js", "json"],
   "testEnvironment": "node",
-  "collectCoverage": true,
+  "collectCoverage": false,
   "collectCoverageFrom": ["**/*.{js,ts,tsx}"],
   "coveragePathIgnorePatterns": ["dist", "/node_modules/", "/build/", "/coverage/"],
   "coverageReporters": ["html", "lcov", "text", "text-summary"],
   "resetMocks": true,
-  "restoreMocks": true
+  "restoreMocks": true,
+  "silent": true,
+  "transform": {"\\.[jt]sx?$": "babel-jest"}
 }
