--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,9 @@
     // DOM for URL global in Node 16+
     "lib": ["ES2021"],
     "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
+    "declaration": true, // Emit TypeScript declaration files (.d.ts)
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
@@ -17,5 +20,5 @@
     "module": "node16",
     "outDir": "build"
   },
-  "exclude": ["node_modules", "build", "./app-plaid.js", "coverage"],
+  "exclude": ["node_modules", "build", "coverage"],
 }
