--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "type": "module",
   "scripts": {
     "start": "tsx app",
-    "docker:build": "chmod +x docker/download-artifacts.sh && ./docker/download-artifacts.sh && docker build --build-arg GITHUB_TOKEN=$(gh auth token) -t actual-server-dev -f docker/edge-ubuntu.Dockerfile .",
+    "docker:artifacts": "chmod +x docker/download-artifacts.sh && ./docker/download-artifacts.sh",
+    "docker:build-common": "yarn docker:artifacts && docker build --build-arg GITHUB_TOKEN=$(gh auth token) -t actual-server-dev",
+    "docker:build-edge": "yarn docker:build-common -f docker/edge-ubuntu.Dockerfile .",
+    "docker:build-edge-alpine": "yarn docker:build-common -f docker/edge-alpine.Dockerfile .",
+    "docker:build-stable": "yarn docker:build-common -f docker/stable-ubuntu.Dockerfile .",
+    "docker:build-stable-alpine": "yarn docker:build-common -f docker/stable-alpine.Dockerfile .",
     "docker:run": "docker run --rm -p 5006:5006 actual-server-dev",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
@@ -17,7 +22,7 @@
     "db:downgrade": "NODE_ENV=development node src/run-migrations.js down",
     "db:test-migrate": "NODE_ENV=test node src/run-migrations.js up",
     "db:test-downgrade": "NODE_ENV=test node src/run-migrations.js down",
-    "types": "tsc --noEmit --incremental --no-emitDeclarationOnly",
+    "types": "tsc --emitDeclarationOnly --incremental",
     "verify": "yarn lint && yarn types",
     "reset-password": "node src/scripts/reset-password.js",
     "health-check": "node src/scripts/health-check.js"
@@ -39,6 +44,7 @@
     "jws": "^4.0.0",
     "migrate": "^2.0.1",
     "nordigen-node": "^1.4.0",
+    "tsx": "^4.17.0",
     "uuid": "^9.0.0",
     "winston": "^3.14.2"
   },
@@ -60,7 +66,6 @@
     "jest": "^29.3.1",
     "prettier": "^2.8.3",
     "supertest": "^6.3.1",
-    "tsx": "^4.17.0",
     "typescript": "^5.5.4"
   },
   "engines": {
